--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - main
-        paths-ignore:
+        path-ignore:
             - 'README.md'
 jobs:
     integration:
