--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,13 +6,14 @@ on:
             - main
         paths-ignore:
             - 'README.md'
+
 jobs:
     integration:
-        name: Continueous Integration
+        name: Continuous Integration  # Fixed typo
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4  # Updated to v4
 
             - name: Lint Code
               run: echo "Linting code"
@@ -21,12 +22,12 @@ jobs:
               run: echo "Running unit tests"
 
     build-and-push-ecr:
-        name: Continueous Delivery
+        name: Continuous Delivery  # Fixed typo
         needs: integration
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4  # Updated to v4
 
             - name: Install Utilities
               run: |
@@ -34,12 +35,11 @@ jobs:
                 sudo apt-get install -y jq unzip
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v1
+              uses: aws-actions/configure-aws-credentials@v2  # Updated to v2
               with:
                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                 aws-region: ap-south-1
-
 
             - name: Login to Amazon ECR
               id: login-ecr
@@ -57,17 +57,17 @@ jobs:
                 # be deployed to ECS.
                 docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
                 docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-                echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+                echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
     Continuous-Deployment:
         needs: build-and-push-ecr
         runs-on: self-hosted
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4  # Updated to v4
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v1
+              uses: aws-actions/configure-aws-credentials@v2  # Updated to v2
               with:
                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -77,15 +77,22 @@ jobs:
               id: login-ecr
               uses: aws-actions/amazon-ecr-login@v1
 
+            - name: Stop and remove existing container
+              run: |
+                docker stop networksecurity || true
+                docker rm networksecurity || true
 
             - name: Pull latest images
               run: |
-               docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+                docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
             - name: Run Docker Image to serve users
               run: |
-               docker run -d -p 8080:8080 --ipc="host" --name=networksecurity -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+                docker run -d \
+                  -p 8080:8080 \
+                  --name=networksecurity \
+                  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
             - name: Clean previous images and containers
               run: |
-               docker system prune -f
+                docker system prune -f
