--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ pyaml
 fastapi
 uvicorn
 xgboost
-##-e .
+google-generativeai
+# ##-e .
 # RAG Chatbot
-langchain
-langchain-community
-langchain-google-genai
-faiss-cpu
+# langchain
+# langchain-community
+# langchain-google-genai
+# faiss-cpu
